gobmkida/g1/eyevalue_to_string
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/eyevalue_to_string/src/engine/optics.c:2345:14: error: use of undeclared identifier 'result_0'
gg_snprintf( result_0, 0x1DuLL, "%d%d%d%d", a, b, c, d); 
             ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/eyevalue_to_string/src/engine/optics.c:2347:14: error: use of undeclared identifier 'result_0'
gg_snprintf( result_0, 0x1DuLL, "[%d, %d, %d, %d]", a, e->b, e->c, e->d); 
             ^
/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/eyevalue_to_string/src/engine/optics.c:2348:8: error: use of undeclared identifier 'result_0'
return result_0; 
       ^
3 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O1/gobmk-gcc-O1/eyevalue_to_string/src/obj/1/optics.o] Error 1
